# steeper

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TS.md  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  test.py
.agents/rules/: always-use-uow-in-usecases.md  dont-create-redundant-usecases.md  implement-service-di-factory-pattern-in-dependencies-file.md
.github/workflows/: ci.yml  publish.yml
celery_tasks/: main.py
docs/: OVERVIEW.md
examples/: .env.example  README.md  aiogram_bot.py  ptb_bot.py  telebot_bot.py
infra/: docker-compose.override.yml  docker-compose.yml
infra/requirements/: base.txt
migrations/versions/: 2919267f9617_initial.py  515e6154818b_remove_phone_number.py  63911955e809_add_col_token_encr.py  9a0e3f8c57e6_initial.py  aee42dd2199f_remove_redundant_permission_field.py  c096e09e32e6_extended_soft_delete.py  d69ff11b09aa_use_telegram_auth.py  da02a31de83d_use_timezone_aware.py
models/: __init__.py
src/analytics/: dependencies.py  models.py  repositories.py  schemas.py  services.py
src/analytics/routers/: analytics.py  audit.py
src/analytics/usecases/: get_bot_summary.py
src/bot/: dependencies.py  enums.py  models.py  routers.py  schemas.py
src/bot/permissions/: checker.py  enum.py  role_matrix.py
src/bot/repositories/: admin_bot_role.py  bot.py
src/bot/services/: bot.py  telegram_api.py
src/bot/usecases/: assign_bot_admin.py  create_bot.py  delete_bot.py  update_bot.py
src/communication/: dependencies.py  enums.py  models.py  routers.py  schemas.py
src/communication/chat/: routers.py
src/communication/chat/usecases/: list_chats.py  list_messages.py  send_message.py
src/communication/repositories/: chat.py  message.py
src/communication/usecases/: handle_webhook.py  log_bot_message.py
src/core/: schemas.py
src/core/database/uow/: application.py
src/core/email_service/: factory.py  mailjet_mailer.py
src/core/errors/: enums.py  handlers.py
src/core/limiter/: __init__.py
src/core/utils/: encryption.py  security.py
src/crm/: models.py  repositories.py  schemas.py
src/integrations/telegram/bot/: telegram_bot_api.py
src/main/: config.py  lifespan.py  presentation.py
src/marketing/: dependencies.py  models.py  routers.py  schemas.py  tasks.py
src/marketing/usecases/: create_campaign.py  get_campaign_stats.py  launch_broadcast.py  process_broadcast.py
src/realtime/: consumers.py  dependencies.py  enums.py  manager.py  routers.py  schemas.py
src/realtime/usecases/: websocket_endpoint.py
src/user/: enums.py  models.py  routers.py  schemas.py
src/user/auth/: dependencies.py  routers.py  schemas.py
src/user/auth/permissions/: checker.py  enum.py  role_matrix.py
src/user/auth/strategies/: base.py
src/user/auth/strategies/telegram/: dto.py  webapp.py  widget.py
src/user/auth/usecases/: get_access_by_refresh.py  register.py  telegram_auth.py
src/workspace/: dependencies.py  enums.py  models.py  repositories.py  routers.py  schemas.py
src/workspace/permissions/: checker.py  enum.py  role_matrix.py
src/workspace/repositories/: workspace.py  workspace_member.py
src/workspace/services/: workspace.py  workspace_member.py
src/workspace/usecases/: create_workspace.py  invite_member.py  list_members.py
steeper/: __init__.py  _client.py  _config.py  repository.py
steeper/integrations/: aiogram.py  ptb.py  telebot.py
tests/: test_client.py  test_config.py
tests/auth/: test_telegram_auth.py
tests/core/: test_error_handlers.py
