[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steeper"
version = "0.1.2"
description = "Telegram bot middleware for Steeper — intercepts updates and outgoing messages to sync with the Steeper platform."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["telegram", "bot", "middleware", "steeper", "aiogram", "telebot", "python-telegram-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
aiogram = ["aiogram>=3.0"]
telebot = ["pyTelegramBotAPI>=4.0"]
ptb = ["python-telegram-bot>=20.0"]
all = [
    "aiogram>=3.0",
    "pyTelegramBotAPI>=4.0",
    "python-telegram-bot>=20.0",
]

[project.urls]
Homepage = "https://github.com/KarimovMurodilla/steeper"
Repository = "https://github.com/KarimovMurodilla/steeper"

[tool.hatch.build.targets.wheel]
packages = ["steeper"]

[tool.hatch.build.targets.sdist]
include = [
    "steeper",
    "README.md",
    "pyproject.toml",
]
