[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steeper"
dynamic = ["version"]
description = "Telegram bot middleware for Steeper — intercepts updates and outgoing messages to sync with the Steeper platform."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["telegram", "bot", "middleware", "steeper", "aiogram", "telebot", "python-telegram-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
aiogram = ["aiogram>=3.0"]
telebot = ["pyTelegramBotAPI>=4.0"]
ptb = ["python-telegram-bot>=20.0"]
all = [
    "aiogram>=3.0",
    "pyTelegramBotAPI>=4.0",
    "python-telegram-bot>=20.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "build>=1.2",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/KarimovMurodilla/steeper"
Repository = "https://github.com/KarimovMurodilla/steeper"
Documentation = "https://github.com/KarimovMurodilla/steeper#readme"
Changelog = "https://github.com/KarimovMurodilla/steeper/blob/main/CHANGELOG.md"
Issues = "https://github.com/KarimovMurodilla/steeper/issues"

[tool.hatch.version]
path = "steeper/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["steeper"]

[tool.hatch.build.targets.sdist]
include = [
    "steeper",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["steeper"]

# Integrations monkey-patch third-party frameworks whose type stubs vary by
# version; full strictness here is fragile across the CI matrix. Keep the core
# strict, relax the framework-wrapping edges.
[[tool.mypy.overrides]]
module = "steeper.integrations.*"
warn_unused_ignores = false
disallow_untyped_defs = false
disable_error_code = ["override", "no-untyped-def", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
